[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprite/enemies/enemy_shooter.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Shooter.gd" type="Script" id=2]
[ext_resource path="res://shaders/shader.shader" type="Shader" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 28.2081

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.255591 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.00254453, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
gravity = Vector3( 0, -60, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 10.0
radial_accel = 10.0
scale = 10.0
color_ramp = SubResource( 5 )

[node name="Shooter" type="Area2D"]
collision_layer = 0
collision_mask = 2147483648
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.30356, 0.23597 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 1 )
hframes = 2

[node name="Position2DBullet" type="Position2D" parent="."]
position = Vector2( 25.858, 0 )

[node name="Timer" type="Timer" parent="." groups=[
"shot",
]]
autostart = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
scale = Vector2( 10, 10 )
pause_particles = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
anims/walk = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
process_material = SubResource( 6 )
[connection signal="body_entered" from="." to="." method="_on_Shooter_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
